--- a/css/styles.css
+++ b/css/styles.css
@@ -657,6 +657,27 @@ address{
     align-items: baseline;
 }
 
+.footer-form{
+    display: flex;
+    flex-direction: column;
+}
+
+.footer-form label{
+    font-weight: 700;
+    font-size: 14px;
+    line-height: calc(16/14);
+    text-transform: uppercase;
+    color:#ffffff;
+}
+
+.footer-form input{
+    padding: 0 15px;
+    background-color: transparent;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+    border-radius: 4px;
+}
+
 /* Join */
 
 .join {
@@ -722,8 +743,8 @@ address{
 }
 
 .backdrop.is-hidden{
-    /* visibility: hidden; */
-    /* opacity: 0; */
+    visibility: hidden;
+    opacity: 0;
     pointer-events: none;
 
 }
