--- a/css/styles.css
+++ b/css/styles.css
@@ -788,7 +788,7 @@ address{
 
 .form {
     width: 100%;
-    outline: 2px solid #212121;
+    /* outline: 2px solid #212121; */
     padding: 40px;
     margin-left: auto;
     margin-right: auto;
@@ -810,6 +810,7 @@ address{
     text-align: center;
     color: var(--title-color);
     margin: 0 auto;
+    /* padding: 40px 40px 12px 40px; */
 }
 
 .form-fieled label{
@@ -820,6 +821,63 @@ address{
     margin-bottom: 4px;
 }
 
+input.input-form{
+    
+    
+    height: 40px;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+}
+
+.coment-form{
+    padding: 12px 16px;
+    height: 120px;
+    resize: none;
+}
+
+label.clause {
+    margin-bottom: 0;
+    padding-top: 20px;
+    padding-bottom: 30px;
+
+    font-size: 14px;
+    line-height: calc(24/14);
+    letter-spacing: 0.03em;
+    color: var(--text-color);
+
+
+    
+}
+
+.clause-link{
+    text-decoration-line: underline;
+    color: var(--accent-color);
+}
+
+.btn-form{
+    
+    padding: 10px 55px;
+    
+    min-width: 200px;
+    font-family: inherit;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: calc(30/16);
+    
+    cursor: pointer;
+    
+    letter-spacing: 0.06em;
+    
+    color: #FFFFFF;
+    
+    display: block;
+    border-color: transparent;
+
+    background-color: #2196F3;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+
+}
 
 
                          /*             Portfolio              */           
