--- a/css/styles.css
+++ b/css/styles.css
@@ -797,7 +797,7 @@ address{
 }
 
 .form-fieled {
-    
+    position: relative;
     margin-bottom: 10px;
     display: flex;
     flex-direction: column;
@@ -821,9 +821,20 @@ address{
     margin-bottom: 4px;
 }
 
+.form-icon{
+    position: absolute;
+    top: 50%;
+    left: 12px;
+    transform: translateY(50%);
+
+    display: inline-block;
+}
+
+.input-form:focus ~ .form-icon{
+   transform: translateX(-50%);
+}
+
 input.input-form{
-    
-    
     height: 40px;
     border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px;
@@ -836,15 +847,18 @@ input.input-form{
 }
 
 label.clause {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     margin-bottom: 0;
     padding-top: 20px;
     padding-bottom: 30px;
+   
 
     font-size: 14px;
     line-height: calc(24/14);
     letter-spacing: 0.03em;
     color: var(--text-color);
-
 
     
 }
@@ -852,6 +866,45 @@ label.clause {
 .clause-link{
     text-decoration-line: underline;
     color: var(--accent-color);
+}
+
+.checkbox{
+    /* -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none; */
+
+    
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
+     
+}
+
+.icon-checkbox{
+    display: inline-block;
+    width: 16px;
+    height: 15px;
+    border:  2px solid #212121;
+    border-radius: 2px;
+    margin-right: 7px;
+    
+}
+
+.checkbox:checked + .icon-checkbox{
+    border-color: var(--accent-color);
+    background-color: var(--accent-color);
+    background-image: url(../images/icon-check.svg);
+    background-size: contain;
+    background-origin: border-box;
+
 }
 
 .btn-form{
