--- a/css/styles.css
+++ b/css/styles.css
@@ -71,6 +71,8 @@ h6{
     padding: 0;
 }
 
+
+
 img{
     display: block;
 }
@@ -660,7 +662,40 @@ address{
 .footer-form{
     display: flex;
     flex-direction: column;
+
+    padding-top: 72px;
+    padding-left: 94px;
 }
+
+.follow{
+    display: flex;
+}
+
+.telegram-btn{
+    min-width: 200px;
+    height: 50px;
+    background-color: var(--accent-color);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    border-color: transparent;
+
+    font-family: inherit;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: calc(30/16);
+
+    display: flex;
+    align-items: center;
+    text-align: center;
+    letter-spacing: 0.06em;
+    
+    color: #FFFFFF;
+    cursor: pointer;
+
+    padding: 10px 10px 10px 30px;
+    margin-left: 12px;
+}
+
 
 .footer-form label{
     font-weight: 700;
@@ -668,10 +703,14 @@ address{
     line-height: calc(16/14);
     text-transform: uppercase;
     color:#ffffff;
+
+    margin-bottom: 20px;
 }
 
 .footer-form input{
-    padding: 0 15px;
+    width: 356px;
+    height: 50px;
+    padding-left: 16px;
     background-color: transparent;
     border: 1px solid rgba(255, 255, 255, 0.3);
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
@@ -730,6 +769,8 @@ address{
 }
 
 /* Modal */
+
+
 .backdrop{
     position: fixed;
     top: 0;
@@ -739,6 +780,7 @@ address{
     background-color: rgba(0, 0, 0, 0.2);
 
     opacity: 1;
+    z-index: 2;
     transition: opacity 250ms var(--timing-function),visibility 250ms var(--timing-function);
 }
 
@@ -786,10 +828,21 @@ address{
     justify-content: center;
 }
 
+.icon-close{
+    transition: fill 250ms var(--timing-function);
+}
+
+.icon-close:hover,
+.icon-close:focus{
+    fill: var(--accent-color);
+}
+
 .form {
     width: 100%;
     /* outline: 2px solid #212121; */
-    padding: 40px;
+    padding-right: 40px;
+    padding-bottom: 40px;
+    padding-left: 40px;
     margin-left: auto;
     margin-right: auto;
 
@@ -810,7 +863,8 @@ address{
     text-align: center;
     color: var(--title-color);
     margin: 0 auto;
-    /* padding: 40px 40px 12px 40px; */
+    padding: 40px 40px 12px 40px;
+    display: block;
 }
 
 .form-fieled label{
@@ -821,29 +875,57 @@ address{
     margin-bottom: 4px;
 }
 
-.form-icon{
+.wrapper{
+    position: relative;
+    display: block;
+}
+
+.icon-form{
     position: absolute;
     top: 50%;
     left: 12px;
-    transform: translateY(50%);
-
-    display: inline-block;
+    /* display: inline-block; */
 }
 
-.input-form:focus ~ .form-icon{
+/* .input-form:focus ~ .form-icon{
    transform: translateX(-50%);
-}
+} */
 
-input.input-form{
+.input-form{
+    transition: border 250ms var(--timing-function);
+
+    width: 100%;
     height: 40px;
     border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px;
+    outline: none;
+    padding-left: 40px;
+    padding-right: 15px;
 }
 
-.coment-form{
+.input-form:focus{
+    border:1px solid var(--accent-color);
+}
+
+.input-form:focus + .icon-form{
+    fill: var(--accent-color);
+}
+
+.comment-form{
+    transition: border 250ms var(--timing-function);
+
     padding: 12px 16px;
     height: 120px;
     resize: none;
+
+    width: 100%;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+    outline: none;
+}
+
+.comment-form:focus{
+    border:1px solid var(--accent-color);
 }
 
 label.clause {
@@ -898,18 +980,26 @@ label.clause {
     
 }
 
-.checkbox:checked + .icon-checkbox{
+.icon-check .checkbox:checked {
+    border-color: var(--accent-color);
+    background-color: var(--accent-color) ;
+    background-origin: border-box;
+
+}
+
+/* .checkbox:checked + .icon-checkbox{
     border-color: var(--accent-color);
     background-color: var(--accent-color);
     background-image: url(../images/icon-check.svg);
     background-size: contain;
     background-origin: border-box;
 
-}
+} */
 
 .btn-form{
     
     padding: 10px 55px;
+    margin: 0 auto;
     
     min-width: 200px;
     font-family: inherit;
@@ -930,6 +1020,10 @@ label.clause {
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
 
+}
+
+.icon-telegram-form{
+    margin-left: 10px;
 }
 
 
